--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "quiz app",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app.js",
+    "start": "cross-env NODE_ENV=production&& node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
     "client:install": "npm install --prefix client",
     "client:build": "npm run build --prefix client",
-    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
+    "dev": "cross-env NODE_ENV=development&& concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [
     "mern",
@@ -21,7 +21,7 @@
   "dependencies": {
     "config": "^3.3.3",
     "express": "^4.17.1",
-    "mongoose": "^5.11.16"
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
