--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "dependencies": {
     "config": "^3.3.3",
     "express": "^4.17.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "cross-env": "^7.0.3",
     "nodemon": "^2.0.7"
   }
 }
